[package]
name = "crc8"
version = "0.1.0"
authors = ["Marcin Kopa <marcin.info@gmail.com>"]

license = "MIT"
description = "A CRC8 implementation"
repository = "https://github.com/mkopa/rust-crc8"
documentation = "https://mkopa.github.io/rust-crc8"
readme = "README.md"
keywords = ["crc", "crc8", "crc-8", "hash", "checksum"]
exclude = [".*"]

[lib]

name = "crc8"
path = "src/lib.rs"

[profile.bench]

opt-level = 3
debug = false

[profile.release]

opt-level = 3
debug = false
lto = true
